<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="gameViewModel"
            type="puzzle.card.set.game.GameViewModel" />
    </data>

    <!-- 최상위 레이아웃 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <!-- 상단 정보 줄 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/orange"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:text="@{gameViewModel.remainTime}"
                android:textColor="@color/black" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remain_card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                android:text="@{gameViewModel.remainCard}"
                android:textColor="@color/black" />

        </LinearLayout><!-- 상단 정보 줄 -->

        <!-- 점수 건성으로 표시 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="30dp" />

            <Space
                android:layout_width="50dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:gravity="right"
                android:paddingRight="20dp"
                android:text="@{gameViewModel.point}"
                android:textColor="@color/red"
                android:textSize="30dp" /><!-- 점수 건성으로 표시 -->

        </LinearLayout>

        <!-- 메인 화면 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!-- 카드 늘어놓을 판 -->
            <GridLayout
                android:id="@+id/game_board"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="9"
                android:alignmentMode="alignBounds"
                android:columnCount="3"
                android:orientation="horizontal"
                android:rowCount="4"
                android:useDefaultMargins="true" /><!-- 카드 늘어놓을 판 -->

            <Space
                android:layout_width="10dp"
                android:layout_height="match_parent" />

            <!-- 카드 판 옆 버튼들 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/green"
                    android:onClick="@{gameViewModel::onClickCheat}"
                    android:text="치트"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/red"
                    android:onClick="@{gameViewModel::onClickShuffle}"
                    android:text="판 엎기"
                    android:textColor="@color/blue"
                    android:textSize="20dp" />

                <ToggleButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:textSize="20dp"
                    android:textOff="@string/super_cheat_off"
                    android:textOn="@string/super_cheat_on"
                    android:checked="@{gameViewModel.superCheatEnabled}"
                    android:onClick="@{gameViewModel::onClickSuperCheat}"
                    app:background="@{gameViewModel.superCheatBgColor}"
                    app:textColor="@{gameViewModel.superCheatTextColor}" />

            </LinearLayout>


        </LinearLayout><!-- 메인 화면 -->

        <!-- 게임 판과 뽑은 카드 목록 사이 경계선 -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginVertical="5dp"
            android:src="#af4"/>
        
        <!-- 뽑은 카드 목록 -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:background="#44f">
            <LinearLayout
                android:id="@+id/flipped_card_view"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/cardContainer"
                android:orientation="horizontal" />
        </HorizontalScrollView>

        <!-- 시작버튼 -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:onClick="@{gameViewModel::onClickStart}"
            android:text="@string/start"
            app:visibility="@{gameViewModel.startButtonVisibility}" />

    </LinearLayout><!-- 최상위 레이아웃 -->


</layout>